# RNAMotif

./: CMakeLists.txt  IFN_gamma.txt  IPknot_utils.h  README.md  RNAMotif.cpp  RNAlib_utils.h  kissing_hairpin  laraGU.cpp  mir_965  motif.h  motif_search.h  motif_search_backup.h  motif_structures.h  stockholm_file.h  stockholm_io.h  stored_interval_tree.h
etc/: top_constant.h  vienna_rna_funct.h
folding_utils/: IPknot_utils.h  RNAlib_utils.h  ipknot.cpp
folding_utils/ipknot/: Makefile.in  ScoringModel.h  boltzmann_param.cpp  fold.cpp
folding_utils/ipknot/.deps/: aln.Po  boltzmann_param.Po  fold.Po
folding_utils/ipknot/contrafold/: rand.h
ipknot/: Makefile  aln.cpp  config.h  ip.cpp  ip.h
ipknot/.deps/: fa.Po  ip.Po  ipknot.Po
ipknot/contrafold/.deps/: SStruct.Po  Utilities.Po
ipknot/nupack/.deps/: nupack.Po
